--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,9 @@ php:
   - '5.6'
   - '7.0'
   - '7.1'
+install:
+  - composer install --dev --no-interaction
+script:
+  - vendor/bin/phpunit -c phpunit.xml
+after_success:
+  - travis_retry vendor/bin/coveralls -v
