--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7.21"
+    "phpunit/phpunit": "^5.7.21",
+    "satooshi/php-coveralls": "^1.0"
   }
 }
